--- a/RRR_styled/index.html
+++ b/RRR_styled/index.html
@@ -47,10 +47,12 @@
 <div class="v ps9 s9 c6">
 <div class="v ps10 s10 c2">
 <div class="v ps11 s11 c7">
-<a class="f button v3 s12" href="http://localhost:3000/login">Log In</a>
+  <a class="f button v3 s12" href="https://ridingretroradio.herokuapp.com/login">Log In</a>
+<!-- <a class="f button v3 s12" href="http://localhost:3000/login">Log In</a> -->
 </div>
 <div class="v ps12 s13 c8">
-<a class="f2 button v3 s14" href="http://localhost:3000/register">Sign Up</a>
+  <a class="f2 button v3 s14" href="https://ridingretroradio.herokuapp.com/register">Sign Up</a>
+<!-- <a class="f2 button v3 s14" href="http://localhost:3000/register">Sign Up</a> -->
 </div>
 </div>
 </div>
