--- a/RRR_styled/index.html
+++ b/RRR_styled/index.html
@@ -21,6 +21,20 @@
 <link rel="stylesheet" href="css/site.20190209100303-gteIE9.css" type="text/css">
 <![endif]-->
 </head>
+<style>
+
+html {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  background: url("/images/img_6040-4000.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
+</style>
 <body id="b">
 <div class="fbk v ps s c fx" data-fbk="fx">
 <div class="ps2 v2 s2">
